fix input jumping around

--- a/packages/augur-simplified/src/modules/market/trading-form.styles.less
+++ b/packages/augur-simplified/src/modules/market/trading-form.styles.less
@@ -223,6 +223,8 @@
   display: flex;
   height: @size-50;
   min-height: @size-50;
+  border: @size-1 solid transparent;
+  outline: 0;
 
   &:focus-within {
     border: @size-1 solid var(--simple-border);
@@ -236,7 +238,9 @@
     color: var(--simple-primary-text);
     background-color: var(--simple-light-bg);
     border-radius: @size-8;
-
+    border: 0;
+    outline: 0;
+    
     &:focus {
       border: 0;
       outline: 0;
